[build-system]
requires = ["setuptools>=45", "wheel", "pybind11>=2.6.0", "numpy>=1.20.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ikfast-pybind"
version = "0.1.0"
description = "Python bindings for IKFast inverse kinematics solver"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "IKFast Python Bindings Contributors"}
]
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "hypothesis>=6.0",
]
